--- a/JavascriptEssentials/TodoList/todo_list.html
+++ b/JavascriptEssentials/TodoList/todo_list.html
@@ -15,7 +15,8 @@
         <!-- Tasks will be displayed here -->
     </ul>
 
-    <button id="clearCompletedBtn">Clear Completed</button>
+    <button id="clearCompletedBtn">Clear Completed</button> <br><br>
+    <button id="deleteAllBtn">Delete All</button>
     <script src="./todo_list.js"></script>
 </body>
 
